# esp-ota-std-example

./: .gitignore  Cargo.toml  beta.sh  bin.sh  build.rs  flash.sh  partitions.csv  readme.md  sdkconfig.defaults
.cargo/: config.toml
src/: main.rs
