[package]
name = "esp-ota-std-ex"
version = "0.1.0"
authors = ["Greg <surfingreg@swimr.com>"]
edition = "2021"
rust-version = "1.82"

[[bin]]
name = "esp-ota-std-ex"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

# [profile.release]
# opt-level = "s"

#[profile.dev]
#debug = true    # Symbols are nice and they don't increase the size on Flash
#opt-level = "z"

[dependencies]
log = "0.4"
# esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-sys = {version = "0.35.0", features = ["default"]}
esp-ota = { version = "0.2.1", path = "../esp-ota"}

[build-dependencies]
embuild = "0.32.0"
# cc = "=1.1.30" # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released

# this does not work anymore
# see .config/config.toml
# [flash] size=8M
# [package.metadata.espflash]
# partition_table = "partitions.csv"