[package]
name = "esp-ota-std-ex"
version = "0.1.0"
authors = ["Greg <surfingreg@swimr.com>"]
edition = "2021"
rust-version = "1.82"

[[bin]]
name = "esp-ota-std-ex"
harness = false

# minimizing rust
# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[dependencies]
esp-idf-sys = {version = "0.35.0", features = ["std"]}
#esp-ota = { version = "0.2.1", path = "../esp-ota", features = ["default"]}
esp-ota = { version="0.2.1", git = "https://github.com/surfingreg/esp-ota.git"}

[build-dependencies]
embuild = "0.32.0"